Fixed url like a boss.

--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -67,29 +67,29 @@
                 </ul>
                 <div id="tab1" style="padding: 0px;">
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
-                        <img width="40px" height="40px" src="../../img/def_user.jpg" style="vertical-align: middle;"/>
-                        <img width="20px" height="20px" src="../../img/blocked.png"/>
+                        <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
+                        <img width="20px" height="20px" src="img/blocked.png"/>
                         Meepo
                     </div>
 
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
-                        <img width="40px" height="40px" src="../../img/def_user.jpg" style="vertical-align: middle;"/>
-                        <img width="20px" height="20px" src="../../img/away.png"/>
+                        <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
+                        <img width="20px" height="20px" src="img/away.png"/>
                         Timbersaw
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
-                        <img width="40px" height="40px" src="../../img/def_user.jpg" style="vertical-align: middle;"/>
-                        <img width="20px" height="20px" src="../../img/offline.png"/>
+                        <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
+                        <img width="20px" height="20px" src="img/offline.png"/>
                         Antimage
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
-                        <img width="40px" height="40px" src="../../img/def_user.jpg" style="vertical-align: middle;"/>
-                        <img width="20px" height="20px" src="../../img/offline.png"/>
+                        <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
+                        <img width="20px" height="20px" src="img/offline.png"/>
                         Batrider
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
-                        <img width="40px" height="40px" src="../../img/def_user.jpg" style="vertical-align: middle;"/>
-                        <img width="20px" height="20px" src="../../img/offline.png"/>
+                        <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
+                        <img width="20px" height="20px" src="img/offline.png"/>
                         Invoker
                     </div>
 
