--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -6,6 +6,7 @@
     <link href="css/start/jquery-ui-1.10.3.custom.css" rel="stylesheet">
     <script src="js/jquery-1.9.1.js"></script>
     <script src="js/jquery-ui-1.10.3.custom.js"></script>
+    <script src="js/ejs.js"></script>
 
     <style>
         .hoov1 {
@@ -16,11 +17,19 @@
             display: inline-block;
             width: 5em;
         }
+        html {
+            height: 100%;
+        }
+        body {
+            margin: 0;
+            padding: 0;
+            height: 100%;
+        }
     </style>
 </head>
 <body>
 
-<div style="display:table;">
+<div style="display:table;height: 100%;">
     <div style="display:table-cell;">
         <div id="user_panel" style="width: 300px; border: #a6c9e2 1px solid; margin-bottom: 10px; border-radius: 5px;">
             <div id="user_nickname"
@@ -69,31 +78,34 @@
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/blocked.png"/>
+                        <span style="display: none;">1</span>
                         Meepo
                     </div>
 
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/away.png"/>
+                        <span style="display: none;">2</span>
                         Timbersaw
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/offline.png"/>
+                        <span style="display: none;">3</span>
                         Antimage
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/offline.png"/>
+                        <span style="display: none;">4</span>
                         Batrider
                     </div>
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/offline.png"/>
+                        <span style="display: none;">5</span>
                         Invoker
                     </div>
-
-
                 </div>
                 <div id="tab2">...</div>
             </div>
@@ -101,7 +113,8 @@
     </div>
 
 
-    <div id="content" style="display:table-cell; width: 100%; padding-left: 10px;">
+    <div id="content" style="display:table-cell; width: 100%; height: 100%; padding-left: 10px;">
+
         <div style="border-bottom: #a6c9e2 1px solid; width: 100%;">
             <h1> Главная страница</h1>
         </div>
@@ -123,6 +136,24 @@
     $(function () {
         $(document).tooltip();
     });
+
+    $('#tab1 div').on('click', function () {
+        var userId = $(this).find('span').text();
+        var data = {
+            "userId": userId
+        };
+        $.ajax({
+            type: "POST",
+            url: '/showUserDialog',
+            dataType: "json",
+            data: data,
+            success: function (ans) {
+                var html = new EJS({url: ' /views/userDialog.ejs'}).render(ans);
+                $('#content').html(html);
+            }
+        });
+    });
+
 </script>
 
 </body>
