cursor( shold be fixed ) Better add page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -42,7 +42,7 @@
     </p>
     <p>We are thankful for using our program! You may contact us by form below.</p></span>
     <textarea name="commentBack" cols="40" rows="3"></textarea></p>
-    <p><input type="submit" value="Send it to us">
+    <p><input type="button" value="Send it to us">
         <input type="reset" value="Clear form"></p>
 
 
