--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -9,8 +9,10 @@
     <script src="js/ejs.js"></script>
 
     <style>
+        a { cursor: url(../img/cur116.cur), auto;}
         .hoov1 {
             background-color: #eaf5f7;
+            cursor: url(../img/cur116.cur), auto;
         }
 
         label {
@@ -21,6 +23,7 @@
             height: 100%;
         }
         body {
+            cursor: url(../img/cur116.cur), auto;
             margin: 0;
             padding: 0;
             height: 100%;
@@ -36,6 +39,7 @@
             font-family: comic sans, comic sans ms, cursive, verdana, arial, sans-serif;
             line-height: 0;
         }
+
     </style>
 </head>
 <body>
@@ -51,21 +55,21 @@
             </div>
 
             <div style="padding-left: 10px; margin-bottom: 10px;">
-                <div style="width: 40px; height: 40px; padding-top: 5px; padding-left: 5px; display: inline-block;"
+                <div style="width: 40px; height: 40px; padding-top: 10px; padding-left: 10px; display: inline-block;"
                      class="hoov">
                     <label for="show_news"/>
                     <img class="hoov" id="show_news" src="img/add.jpg" width="30" height="30"
                          alt="Добавить контакт" title="Просмотр новостей"/>
                 </div>
 
-                <div style="width: 40px; height: 40px; padding-top: 5px; padding-left: 5px; display: inline-block;"
+                <div style="width: 40px; height: 40px; padding-top: 10px; padding-left: 10px; display: inline-block;"
                      class="hoov">
                     <label for="add_contact"/>
                     <img class="hoov" id="add_contact" src="img/add.jpg" width="30" height="30"
                          alt="Добавить контакт" title="Добавить контакт"/>
                 </div>
 
-                <div style="width: 40px; height: 40px; padding-top: 5px; padding-left: 5px; display: inline-block;"
+                <div style="width: 40px; height: 40px; padding-top: 10px; padding-left: 10px; display: inline-block;"
                      class="hoov">
                     <label for="create_chat"/>
                     <img class="hoov" id="create_chat" src="img/add.jpg" width="30" height="30"
