В tutby_chat_create_db.sql 1) Добавил префикс БД к friends 2) Добавил 4 разных статуса в таблицу status 3) Добавил админа БД В index.js 1) Добавил соединение с БД 2) Теперь при нажатии на меню изменении статуса, если вы подсоединены к БД статус текущего пользователя (на данный момент только админа) изменяется в БД. 3) Все действия с БД выводятся в консоль, так что чуть что зырьте в консоль.

--- a/views/userDialog.ejs
+++ b/views/userDialog.ejs
@@ -9,6 +9,12 @@
     </div>
 
     <div style="display:table-row; height: 150px; width: 100%; text-align: center;">
-        <textarea style="width: 300px; height: 150px; resize: none;"></textarea>
+        <textarea style="width: 300px; height: 150px; resize: none;"> </textarea>
+        <input type="button" name="Отправить" class="ui-button" value="Отправить">
+        <input type="button" name="Стереть" class="ui-button" value="Стереть">
     </div>
+
+
+
+
 </div>
