--- a/views/index2.ejs
+++ b/views/index2.ejs
@@ -36,6 +36,18 @@
             font-family: comic sans, comic sans ms, cursive, verdana, arial, sans-serif;
             line-height: 0;
         }
+        .turn:hover {
+
+            -moz-transform: translate(60em,0);
+            -ms-transform: translate(60em,0);
+            -webkit-transform: translate(60em,0);
+            -o-transform: translate(60em,0);
+            transform: translate(60em,0);
+            -webkit-transition: all 6s ease-in-out;
+            -moz-transition: all 6s ease-in-out;
+            -o-transition: all 6s ease-in-out;
+            -ms-transition: all 6s ease-in-out;
+        }
     </style>
 </head>
 <body>
@@ -130,14 +142,34 @@
             <h1> Главная страница</h1>
         </div>
         <h3>ываываываываываав</h3>
+        Кликни по Мишке, что бы заставить его кодить
     </div>
     <!--<div id="about" ><a href="#about" style="text-decoration:none;">About us</a></div>-->
     <div class="about">About us</div>
 
+    <p><img style="" class="turn"  src="../img/michail.jpg"  /></p>
 </div>
 
 
 <script>
+    $('.hoov #add_contact').on('click', function () {
+        var userId = $(this).find('span').text();
+        var data = {
+            "userId": userId
+        };
+
+        $.ajax({
+            type: "GET",
+            url: '/add_contact',
+            dataType: "json",
+            success: function (ans) {
+                var html = new EJS({url: ' /views/add_contact.ejs'}).render(ans);
+                $('#content').html(html);
+            }
+        });
+        var html = new EJS({url: ' /views/add_contact.ejs'}).render();
+        $('#content').html(html);
+    });
     $("#tabs").tabs();
     $(".hoov").hover(
             function () {
