--- a/views/main.ejs
+++ b/views/main.ejs
@@ -2,7 +2,7 @@
 <html lang="us">
 <head>
     <meta charset="utf-8">
-    <title>RACH</title>
+    <title>Главное окно</title>
     <link href="css/start/jquery-ui-1.10.3.custom.css" rel="stylesheet">
     <script src="js/jquery-1.9.1.js"></script>
     <script src="js/jquery-ui-1.10.3.custom.js"></script>
