--- a/views/userDialog.ejs
+++ b/views/userDialog.ejs
@@ -4,11 +4,11 @@
         <span><%= userName %></span>
     </div>
 
-    <div style="display: table-row; height: 100%; width: 100%; text-align: center;">
-        <div style="display: table-cell; vertical-align: bottom; width: 100%; height: 100%;">chat message</div>
+    <div style="display: table-row; height: 100%; width: 100%; text-align: center;" id="messages">
     </div>
 
     <div style="display:table-row; height: 150px; width: 100%; text-align: center;">
-        <textarea style="width: 300px; height: 150px; resize: none;"></textarea>
+        <textarea style="width: 300px; height: 150px; resize: none;" id="mess"></textarea>
+        <input type="button" value="Send!" id="send"/>
     </div>
 </div>
