Начнём: в database статус для user если он offline теперь 0 (был 4)(это для того чтобы когда создаёшь юзера он был по умолчанию offline); about : никаой доты в нашем проекте; main: вернул RACH и поставил его куда нужно, удалили пробелы и и коментарии, ссылка  выхода Выход (удаляет из сессии user_id и redirect('/login'); index: clasker RACH ищи ошибки в своём коде, а не моём (твою ошибку я нашёл и исправил), прикрепил проверку на пути, где она нужна, к методам где меняется статус id берётся из сессии, а так же res.redirect('back');(те туда, откуда был вызван метод), удалил несущесвенный и неиспользующийся код. сервер запускается на порту 3000 (теперь у всех точно должно запустится);

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -35,7 +35,7 @@
    <p>Our team:
            <ul>
                <li>Andrew </li>
-               <li>Michail ( ne ochen' v dotky)</li>
+               <li>Michail</li>
                <li>Alex</li>
                <li>Ilya</li>
             </ul>
