--- a/views/main.ejs
+++ b/views/main.ejs
@@ -59,7 +59,7 @@
                  style="border-bottom: #a6c9e2 1px solid; margin-bottom: 10px; height: 30px; padding-left: 10px; padding-top: 5px;"
                  class="hoov">
                 <span class="ui-icon ui-icon-circle-triangle-s" style="display: inline-block;"></span>
-                <span>Clasker</span>
+                <span>Clasker RACH</span>
             </div>
 
             <div style="padding-left: 10px; margin-bottom: 10px;">
@@ -90,7 +90,6 @@
             </div>
 
         </div>
-
         <div id="left_panel" style="width: 300px; height: 100%;">
             <div id="tabs">
                 <ul>
@@ -104,7 +103,6 @@
                         <span style="display: none;">1</span>
                         Meepo
                     </div>
-
                     <div style="width: 280px; height: 50px; padding-top: 2px; padding-left: 10px;" class="hoov">
                         <img width="40px" height="40px" src="img/def_user.jpg" style="vertical-align: middle;"/>
                         <img width="20px" height="20px" src="img/away.png"/>
@@ -134,22 +132,18 @@
             </div>
         </div>
     </div>
-
-
     <div id="content" style="display:table-cell; width: 100%; height: 100%; padding-left: 10px;">
 
         <div style="border-bottom: #a6c9e2 1px solid; width: 100%;">
             <h1> Главная страница</h1>
         </div>
-        <h3>ываываываываываав</h3>
-        Кликни по Мишке, что бы заставить его кодить
+        <h3>Загаловок уровня 3</h3>
+        Кликни по Мишке, что бы заставить его кодить, иначе Мишка найдёт Твой адрес, придёт к тебе домой и заставит кодить Тебя!
     </div>
-    <!--<div id="about" ><a href="#about" style="text-decoration:none;">About us</a></div>-->
     <div class="about">About us</div>
-
+    <a href="/logout">Выход</a>
     <p><img style="" class="turn"  src="../img/michail.jpg"  /></p>
 </div>
-
 
 <script>
     $('.hoov #add_contact').on('click', function () {
@@ -171,17 +165,14 @@
         $('#content').html(html);
     });
     $("#tabs").tabs();
-    $(".hoov").hover(
-            function () {
+    $(".hoov").hover(function () {
                 $(this).toggleClass("hoov1");
             }, function () {
                 $(this).toggleClass("hoov1");
-            }
-    );
+            });
     $(function () {
         $(document).tooltip();
     });
-
     $('#tab1 div').on('click', function () {
         var userId = $(this).find('span').text();
         var data = {
@@ -198,22 +189,8 @@
             }
         });
     });
-
-
     $('.about').on('click', function () {
-   //     alert('asasd');
-//        $.ajax({
-//
-//            type: "GET",
-//            url: '/about',
-//            dataType: "json",
-//            success: function (ans) {
-//                var html = new EJS({url: ' /views/about.ejs'}).render(ans);
-//                $('#content').html(html);
-//            }
-//        });
         var html = new EJS({url: ' /views/about.ejs'}).render();
-      //  alert(html);
         $('#content').html(html);
     });
 </script>
