--- a/views/main.ejs
+++ b/views/main.ejs
@@ -17,14 +17,17 @@
             display: inline-block;
             width: 5em;
         }
+
         html {
             height: 100%;
         }
+
         body {
             margin: 0;
             padding: 0;
             height: 100%;
         }
+
         .about {
             text-shadow: 2px 1px 0 rgba(40, 252, 245, 1);
             font-weight: normal;
@@ -36,13 +39,14 @@
             font-family: comic sans, comic sans ms, cursive, verdana, arial, sans-serif;
             line-height: 0;
         }
+
         .turn:hover {
 
-            -moz-transform: translate(60em,0);
-            -ms-transform: translate(60em,0);
-            -webkit-transform: translate(60em,0);
-            -o-transform: translate(60em,0);
-            transform: translate(60em,0);
+            -moz-transform: translate(60em, 0);
+            -ms-transform: translate(60em, 0);
+            -webkit-transform: translate(60em, 0);
+            -o-transform: translate(60em, 0);
+            transform: translate(60em, 0);
             -webkit-transition: all 6s ease-in-out;
             -moz-transition: all 6s ease-in-out;
             -o-transition: all 6s ease-in-out;
@@ -146,7 +150,7 @@
     <!--<div id="about" ><a href="#about" style="text-decoration:none;">About us</a></div>-->
     <div class="about">About us</div>
 
-    <p><img style="" class="turn"  src="../img/michail.jpg"  /></p>
+    <p><img style="" class="turn" src="../img/michail.jpg"/></p>
 </div>
 
 
@@ -154,53 +158,16 @@
     (function () {
         var ws = new WebSocket("ws://localhost:1337/");
         var currentChanel = -1;
-        var message =  null;
+        var message = null;
         ws.onopen = function () {
 //            alert("Connection opened...")
-    $('.hoov #add_contact').on('click', function () {
-        var userId = $(this).find('span').text();
-        var data = {
-            "userId": userId
-        };
-
-        $.ajax({
-            type: "GET",
-            url: '/add_contact',
-            dataType: "json",
-            success: function (ans) {
-                var html = new EJS({url: ' /views/add_contact.ejs'}).render(ans);
-                $('#content').html(html);
-            }
-        });
-        var html = new EJS({url: ' /views/add_contact.ejs'}).render();
-        $('#content').html(html);
-    });
-    $("#tabs").tabs();
-    $(".hoov").hover(
-            function () {
-                $(this).toggleClass("hoov1");
-            }, function () {
-                $(this).toggleClass("hoov1");
-            }
-    );
-    $(function () {
-        $(document).tooltip();
-    });
-
-    $('#tab1 div').on('click', function () {
-        var userId = $(this).find('span').text();
-        var data = {
-            "userId": userId
-        };
+        }
         ws.onclose = function () {
 //            alert("Connection closed...")
         };
         ws.onmessage = function (evt) {
-//            alert("Have message..." + evt);
-//            console.log(evt);
             var data = JSON.parse(evt.data);
             console.log(data);
-//            console.log(data);
             switch (data.type) {
                 case 'showMessages':
                     for (var i = 0; i < data.data.length; ++i) {
@@ -210,9 +177,6 @@
                     }
                     break;
                 case 'newChanelMessage':
-//                        alert(currentChanel);
-//                    console.log(currentChanel);
-//                    console.log(data);
                     if (currentChanel == parseInt(data.chanel)) {
                         message.html(message.html() + '<p><strong>' + data.user +
                                 "</strong>: " + data.message + '</p>');
@@ -221,6 +185,24 @@
 
             }
         };
+        $('.hoov #add_contact').on('click', function () {
+            var userId = $(this).find('span').text();
+            var data = {
+                "userId": userId
+            };
+
+            $.ajax({
+                type: "GET",
+                url: '/add_contact',
+                dataType: "json",
+                success: function (ans) {
+                    var html = new EJS({url: ' /views/add_contact.ejs'}).render(ans);
+                    $('#content').html(html);
+                }
+            });
+            var html = new EJS({url: ' /views/add_contact.ejs'}).render();
+            $('#content').html(html);
+        });
         $("#tabs").tabs();
         $(".hoov").hover(
                 function () {
@@ -233,7 +215,41 @@
             $(document).tooltip();
         });
 
-        $('#tab1 div').on('click', function () {
+//        $('#tab1 div').on('click', function () {
+//            var userId = currentChanel = $(this).find('span').text();
+//            var data = {
+//                "type": "listen",
+//                "userId": userId
+//            };
+//
+//            $.ajax({
+//                type: "POST",
+//                url: '/showUserDialog',
+//                dataType: "json",
+//                data: data,
+//                success: function (ans) {
+//                    var html = new EJS({url: ' /views/userDialog.ejs'}).render(ans);
+//                    $('#content').html(html);
+//                    message = $('#messages');
+//
+//                    $("#send").on('click', function () {
+//                        var message = $('#mess').val();
+//                        ws.send(JSON.stringify({
+//                            "type": "sendMessage",
+//                            "message": message,
+//                            "chanel": userId
+//                        }));
+//                    });
+//
+//                    ws.send(JSON.stringify(data));
+//                }
+//            });
+//        });
+        $(function () {
+            $(document).tooltip();
+        });
+
+        $('#tab1').find('div').on('click', function () {
             var userId = currentChanel = $(this).find('span').text();
             var data = {
                 "type": "listen",
@@ -241,7 +257,7 @@
             };
 
             $.ajax({
-                type: "POST",
+                type: "GET",
                 url: '/showUserDialog',
                 dataType: "json",
                 data: data,
