--- a/views/userDialog.ejs
+++ b/views/userDialog.ejs
@@ -4,13 +4,12 @@
         <span><%= userName %></span>
     </div>
 
-    <div style="display: table-row; height: 100%; width: 100%; text-align: center;">
-        <div style="display: table-cell; vertical-align: bottom; width: 100%; height: 100%;">chat message</div>
+    <div id="messages" style="display: table-row; height: 100%; width: 100%; text-align: center;">
     </div>
 
     <div style="display:table-row; height: 150px; width: 100%; text-align: center;">
-        <textarea style="width: 300px; height: 150px; resize: none;"> </textarea>
-        <input type="button" name="Отправить" class="ui-button" value="Отправить">
+        <textarea id="mess" style="width: 300px; height: 150px; resize: none;"> </textarea>
+        <input type="button" id="send" name="Отправить" class="ui-button" value="Отправить">
         <input type="button" name="Стереть" class="ui-button" value="Стереть">
     </div>
 </div>
